# SorobanPulse

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  mutants.toml
.github/workflows/: backup-verify.yml  ci.yml  mutation-testing.yml
docs/: alerts.yml  api-compatibility-testing.md  architecture.md  audit_logging.md  capacity-planning.md  contract-testing.md  deployment.md  email-notifications.md  mutation-testing.md  owasp_security_headers.md  performance-regression-testing.md  property-based-testing.md  rate_limiting.md  webhook-verification.md  webhook_signing.md
docs/runbooks/: db-pool-exhaustion.md  indexer-lag.md  rpc-errors.md  sse-connections.md  webhook-failures.md
migrations/: 20260527000001_rls_events.sql  20260527000002_webhook_failures.down.sql  20260527000002_webhook_failures.sql  20260527000003_gin_index_event_data_topic.sql  20260531000001_add_email_tracking_tables.sql  20260531000002_add_email_deliveries.sql  20260531000003_add_suppression_lists.sql  20260601000000_email_unsubscribes.down.sql  20260601000000_email_unsubscribes.sql  20260601000001_email_bounces.down.sql  20260601000001_email_bounces.sql  20260625000001_notification_channel_enhancements.down.sql  20260625000001_notification_channel_enhancements.sql  20260625000002_notification_channel_groups.down.sql  20260625000002_notification_channel_groups.sql  20260626000001_rate_limit_counters.sql  20260626000002_audit_logs.sql
scripts/: backup.sh  check-migrations.sh  restore.sh
sdk/python/openapi_client/: webhook_verification.py
sdk/typescript/: README.md  index.ts  sse.ts  webhook-verification.ts
sdk/typescript/__tests__/: sse.test.ts
sdk/typescript/apis/: EventsApi.ts
src/: audit_logging.rs  capacity_planning.rs  config.rs  email.rs  handlers.rs  indexer.rs  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  rate_limiter.rs  routes.rs  stats_refresh.rs  webhook.rs  webhook_verification.rs
tests/: compatibility_tests.rs  contract_tests.rs  performance_regression_tests.rs  property_based_tests.rs
