[package]
name = "soroban-pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }
opentelemetry_sdk = { version = "0.21", optional = true }
dotenvy = "0.15"
toml = "0.8"
thiserror = "1"
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
anyhow = "1"
futures = "0.3"
url = "2"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full", "metrics", "request-id", "limit"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
axum-extra = { version = "0.9", features = ["typed-header"] }
async-trait = "0.1"
tower_governor = { version = "0.8", features = ["axum"] }
# Token-bucket rate limiting for per-channel notification throttling (Issue #476).
governor = "0.10"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2.5"
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }

# Issue #267: XDR validation
stellar-xdr = { version = "26", features = ["std", "curr", "serde"] }

# Issue #266: Bloom filter deduplication
bloomfilter = "3"

# Issue #268: Contract count cache
moka = { version = "0.12", features = ["future"] }

# Issue #453: Per-IP SSE connection tracking
dashmap = "5"

# Issue #367: Zeroizing secrets
secrecy = { version = "0.8", features = ["serde"] }


# Issue #265: AWS Kinesis streaming (optional, behind kinesis feature flag)
aws-sdk-kinesis = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }

# Issue #264: GCP Pub/Sub streaming (optional, behind pubsub feature flag)
google-cloud-pubsub = { version = "0.33", optional = true }

# Email notifications
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "dkim"] }

# DNS resolver for SPF record checks (Issue #486)
hickory-resolver = "0.24"

# Issue #480 & #482: Multi-language and HTML email notification templates (Handlebars)
handlebars = "5"

# Issue #479: cron expression parsing for custom notification schedules
cron = "0.12"

# JSON Schema validation
jsonschema = "0.18"

# Issue #XXX: Lua scripting for event transformation (optional, behind lua feature flag)
mlua = { version = "0.9", features = ["lua54", "async", "serialize"], optional = true }

[features]
default = []
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]
zipkin = ["dep:opentelemetry", "dep:opentelemetry-zipkin", "dep:opentelemetry_sdk"]
encryption = ["dep:aes-gcm", "dep:rand"]
kinesis = ["dep:aws-sdk-kinesis", "dep:aws-config"]
pubsub = ["dep:google-cloud-pubsub"]
archive = []
lua = ["dep:mlua"]

[dev-dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "migrate"] }
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
# Issue #554: Property-based testing
proptest = "1"

[dependencies.flate2]
version = "1"

[dependencies.tempfile]
version = "3"

[dependencies.http-body-util]
version = "0.1"

[dependencies.parquet]
version = "53"
default-features = false
features = ["snap"]

[dependencies.arrow-array]
version = "53"

[dependencies.opentelemetry-zipkin]
version = "0.19"
optional = true

[[bench]]
name = "pagination"
harness = false

[[bench]]
name = "db_queries"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "conditional_get"
harness = false
